fix backdrop crossfade flickering

--- a/frontend/components/scenery/scenery.css
+++ b/frontend/components/scenery/scenery.css
@@ -2,51 +2,42 @@
 .backdrop-container {
     width: 100dvw;
     height: 100dvh;
+    margin: 0px;
+    padding: 0px;
     background-color: black;
     cursor: none !important;
+}
+
+.primary, .secondary {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100dvw;
+    height: 100dvh;
+    margin: 0px;
+    padding: 0px;
+    transition: opacity 1.25s ease-in-out;
 }
 
 img, video {
     width: 100%;
     height: 100%;
+    margin: 0px;
+    padding: 0px;
 }
 
-@keyframes fadein {
-    0% {
-        opacity: 0%;
-    }
-
-    100% {
-        opacity: 100%;
-    }
+.backdrop-container:not(.switch-to-secondary) .primary {
+    opacity: 100%;
 }
 
-@keyframes fadeout {
-    0% {
-        opacity: 100%;
-    }
-
-    100% {
-        opacity: 0%;
-    }
+.backdrop-container:not(.switch-to-secondary) .secondary {
+    opacity: 0%;
 }
 
-.backdrop-container.primary-to-secondary .primary {
-    animation: fadeout 1.25s ease-in-out 1;
-    z-index: 0;
+.backdrop-container.switch-to-secondary .primary {
+    opacity: 0%;
 }
 
-.backdrop-container.primary-to-secondary .secondary {
-    animation: fadein 1.25s ease-in-out 1;
-    z-index: 1000;
-}
-
-.backdrop-container.secondary-to-primary .primary {
-    animation: fadein 1.25s ease-in-out 1;
-    z-index: 1000;
-}
-
-.backdrop-container.secondary-to-primary .secondary {
-    animation: fadeout 1.25s ease-in-out 1;
-    z-index: 0;
+.backdrop-container.switch-to-secondary .secondary {
+    opacity: 100%;
 }
